# mdai26_pullm

./: .gitignore  README.md  pyproject.toml  repo_description_en.md  requirements.txt
outputs/: benchmark_runs.csv  benchmark_summary.csv
paper/: supplement.tex
scripts/: __init__.py  compare_common_variables.py  download_speakleash_datasets.py  generate_non_scar_stability_report.py  generate_tables_for_paper.py  preprocess_datasets.py  run_benchmark.py  run_smoke_benchmark.py  visualize_benchmark_results.py
src/py_puml/: __init__.py  benchmark.py  data_loader.py  labelling.py  methods.py  metrics.py
tests/: test_benchmark.py  test_labelling.py  test_methods_smoke.py  test_metrics.py
